fixed graphs in service provider and clients and made them collapsable

--- a/front-end/src/style/Master.css
+++ b/front-end/src/style/Master.css
@@ -817,3 +817,31 @@ caption:hover {
   text-decoration: underline;
 }
 
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: center;
+  outline: none;
+  background-color:var(--zomp);
+  color: #fefefe;
+  font-size: 20px;
+  /*border-radius: 12px;*/
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.collapsible:hover {
+  background-color: #ccc;
+}
+
+
+.content {
+  padding: 0 18px;
+  display: block;
+  overflow: hidden;
+  background-color: #f1f1f1;
+
+}
